@@ -86,7 +86,7 @@ void EmployeeController::openEditEmployeeDialog (int employeeId)
     if (!m_databaseWrapper->getEmployee(employeeId,employee))
     {
         QMessageBox::warning(0, tr("Edit Employee Error"),
-                             tr("The employee can not be displayed!\n Database Error!"));
+                             tr("The employee can not be edited!\n Database Error!"));
         return;
     }
 
